--- a/Leetcode75/345. Reverse Vowels of a String.md
+++ b/Leetcode75/345. Reverse Vowels of a String.md
@@ -1,1 +1,70 @@
 # Requirements 
+
+Given a string s, reverse only all the vowels in the string and return it.
+
+The vowels are 'a', 'e', 'i', 'o', and 'u', and they can appear in both lower and upper cases, more than once.
+
+Example 1:
+
+Input: s = "hello"
+Output: "holle"
+Example 2:
+
+Input: s = "leetcode"
+Output: "leotcede"
+ 
+Constraints:
+
+1 <= s.length <= 3 * 105
+s consist of printable ASCII characters.
+
+# Solution
+
+## Intuition
+The same logic as reversing an entire string applies. However, the vowels must be isolated.
+
+## Approach
+Find the first and last vowels one at a time and swap them. Ensuring that the pointers front and back pointers do not overlap.
+
+## Complexity
+### Time complexity
+- s.split("") -> O(n)
+- while (i < j) ensures that the pointers move towards each other
+- while (i < j && !vowels.includes(string[i])) AND while (i < j && !vowels.includes(string[j])) ensure that the outer bounds are not exceeded.
+- Ensures that each letter is only processed once.
+- Therefore, O(n)
+### Space complexity:
+O(n) where n is the length of s
+
+# Code
+
+  /**
+   * @param {string} s
+   * @return {string}
+   */
+  var reverseVowels = function(s) {
+      let string = s.split("");
+      vowels = ['a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U'];
+  
+      let i = 0;
+      let j = string.length - 1;
+      while (i < j) {
+          // Find first vowel from the left
+          while (i < j && !vowels.includes(string[i])) {
+              i++;
+          }
+          // Find the first vowel from the right
+          while (i < j && !vowels.includes(string[j])) {
+              j--;
+          }
+          
+          // swaps the vowels
+          const temp = string[i];
+          string[i] = string[j];
+          string[j] = temp;
+          i++;
+          j--;
+      }
+  
+      return string.join('');
+  };
