Update 345. Reverse Vowels of a String.md

--- a/Leetcode75/345. Reverse Vowels of a String.md
+++ b/Leetcode75/345. Reverse Vowels of a String.md
@@ -1,22 +1,17 @@
 # Requirements 
 
 Given a string s, reverse only all the vowels in the string and return it.
-
 The vowels are 'a', 'e', 'i', 'o', and 'u', and they can appear in both lower and upper cases, more than once.
 
-Example 1:
-
-Input: s = "hello"
-Output: "holle"
-Example 2:
-
-Input: s = "leetcode"
-Output: "leotcede"
- 
-Constraints:
-
-1 <= s.length <= 3 * 105
-s consist of printable ASCII characters.
+### Example 1:
+- Input: s = "hello"
+- Output: "holle"
+### Example 2:
+- Input: s = "leetcode"
+- Output: "leotcede"
+### Constraints:
+- 1 <= s.length <= 3 * 105
+- s consist of printable ASCII characters.
 
 # Solution
 
@@ -37,6 +32,7 @@ Find the first and last vowels one at a time and swap them. Ensuring that the po
 O(n) where n is the length of s
 
 # Code
+## Javascript
 ```
 /**
  * @param {string} s
